fixed margin on mobile share button

--- a/src/components/Listing/style.scss
+++ b/src/components/Listing/style.scss
@@ -15,6 +15,7 @@
     justify-content: flex-start;
     overflow: hidden;
     padding-left: 0;
+    margin-bottom: 10px;
   }
 
   .ranking {
